Fixed images stretching on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -158,6 +158,7 @@ main {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
+  align-items: flex-start;
 }
 
 .frame img {
