--- a/resources/sass/_frames.sass
+++ b/resources/sass/_frames.sass
@@ -44,6 +44,7 @@
 		display: flex
 		width: fit-content
 		height: fit-content
+		align-items: flex-start
 
 	img
 		max-height: 75vh
